kubernetes/apps/bazarr/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bazarr
  template:
    metadata:
      labels:
        app: bazarr
    spec:
      containers:
        - name: bazarr
          image: linuxserver/bazarr:1.6.1 # {"$imagepolicy": "flux-system:bazarr"}
          resources:
            requests:
              memory: "238Mi"
              cpu: "10m"
            limits:
              memory: "238Mi"
          ports:
            - containerPort: 6767 # Bazarr web interface
          volumeMounts:
            - mountPath: /config
              name: bazarr
            - mountPath: /movies
              name: movies
            - mountPath: /downloads
              name: downloads
            - mountPath: /series
              name: series
      volumes:
        - name: bazarr
          persistentVolumeClaim:
            claimName: bazarr
        - name: movies
          persistentVolumeClaim:
            claimName: movies
        - name: downloads
          persistentVolumeClaim:
            claimName: downloads
        - name: series
          persistentVolumeClaim:
            claimName: series
